--- a/llama_cpp/server_config.json
+++ b/llama_cpp/server_config.json
@@ -6,7 +6,7 @@
   "models": [
     {
       "model": "./llama_cpp/models/phi3_mini_model/phi3_mini_model.gguf",
-      "model_alias": "phi3-mini",
+      "model_alias": "gpt-3.5-turbo",
       "n_gpu_layers": -1,
       "offload_kqv": true,
       "n_threads": 8,
@@ -15,12 +15,12 @@
     },
     {
       "model": "./llama_cpp/models/mixedbread/mxbai-embed-large-v1-f16.gguf",
-      "model_alias": "mxbai-embed",
+      "model_alias": "text-embedding-ada-002",
       "n_gpu_layers": -1,
       "offload_kqv": true,
       "n_threads": 8,
       "n_batch": 512,
-      "n_ctx": 2048,
+      "n_ctx": 512,
       "embedding":true
     }
   ]
