--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,15 @@
 llama-cpp-python==0.2.90
-openai==1.55.3
-requests==2.32.3
-instructor==1.7.0
-pydantic==2.10.2
+openai~=1.58.1
+requests~=2.32.3
+instructor~=1.7.0
+pydantic~=2.10.4
+bs4~=0.0.2
+langchain~=0.3.13
+langchain-core~=0.3.28
+langchain-openai~=0.2.14
+langchain-community~=0.3.13
+notebook~=7.3.2
+uvicorn~=0.34.0
+fastapi~=0.115.6
+starlette-context~=0.3.6
+faiss-cpu~=1.9.0
