--- a/llama_cpp/server_config.json
+++ b/llama_cpp/server_config.json
@@ -1,5 +1,5 @@
 {
-  "host": "localhost",
+  "host": "0.0.0.0",
   "port": 8085,
   "api_key": "masters_degree_project",
   "interrupt_requests": false,
